{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 36,
  "lineage": "9b234709-18ae-c133-a280-d744d1f431cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cc84810ae60c3ac",
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:instance/i-0903daa1801831613",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0903daa1801831613",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bba16bf03e5d26e9"
              }
            ],
            "primary_network_interface_id": "eni-0bba16bf03e5d26e9",
            "private_dns": "ip-10-0-0-245.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.245",
            "public_ip": "54.206.54.242",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0615dbf85d4d3c4a0",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0131e13650c76e6a0",
            "tags": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-EC2",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "tags_all": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-EC2",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6fd7717094d8684"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:internet-gateway/igw-049d2e38a67b516d1",
            "id": "igw-049d2e38a67b516d1",
            "owner_id": "164695192974",
            "region": "ap-southeast-2",
            "tags": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-IGW",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "tags_all": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-IGW",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "vpc_id": "vpc-019d48df097d9c43f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:route-table/rtb-0aab9d81db04f3b36",
            "id": "rtb-0aab9d81db04f3b36",
            "owner_id": "164695192974",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049d2e38a67b516d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-RT",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "tags_all": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-RT",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "timeouts": null,
            "vpc_id": "vpc-019d48df097d9c43f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "164695192974",
            "id": "rtb-0aab9d81db04f3b36",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.internet_GW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_Sub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4bd8f6e59b4e9c4",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0aab9d81db04f3b36",
            "subnet_id": "subnet-0131e13650c76e6a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_GW",
            "aws_route_table.public_RT",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:security-group/sg-0a6fd7717094d8684",
            "description": "allow http \u0026 https traffic",
            "egress": [],
            "id": "sg-0a6fd7717094d8684",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-http-https",
            "name_prefix": "",
            "owner_id": "164695192974",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019d48df097d9c43f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "164695192974",
            "id": "sg-0a6fd7717094d8684",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:subnet/subnet-0131e13650c76e6a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0131e13650c76e6a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164695192974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-PubSubnet",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "tags_all": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-PubSubnet",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "vpc_id": "vpc-019d48df097d9c43f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "164695192974",
            "id": "subnet-0131e13650c76e6a0",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:vpc/vpc-019d48df097d9c43f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f9f7188eb294e87",
            "default_route_table_id": "rtb-0c660600d5a665514",
            "default_security_group_id": "sg-0fb5cb2b803aa9d50",
            "dhcp_options_id": "dopt-0412ace9b6083cc2a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019d48df097d9c43f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c660600d5a665514",
            "owner_id": "164695192974",
            "region": "ap-southeast-2",
            "tags": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-VPC",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            },
            "tags_all": {
              "CostCentre": "ABC123",
              "ManagedBy": "Terraform",
              "Name": "Nginx-Project-VPC",
              "Project": "Project1-Deploying-NGINX-Server-in-AWS"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:security-group-rule/sgr-0d21b5112cb46da05",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d21b5112cb46da05",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-2",
            "security_group_id": "sg-0a6fd7717094d8684",
            "security_group_rule_id": "sgr-0d21b5112cb46da05",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:164695192974:security-group-rule/sgr-07ea3ce118d700c03",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-07ea3ce118d700c03",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-2",
            "security_group_id": "sg-0a6fd7717094d8684",
            "security_group_rule_id": "sgr-07ea3ce118d700c03",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}